--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+04 Attention Models/1 Neural Machine Translation/assignment/data/opus/medical/0.1.0/opus-train.tfrecord-00000-of-00002
+04 Attention Models/1 Neural Machine Translation/assignment/data/opus/medical/0.1.0/opus-train.tfrecord-00001-of-00002
